--- a/index.html
+++ b/index.html
@@ -1,52 +1,51 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Seven&#39;s Blog : 不让任何事成为你不进步的理由">
+    <title>Seven&#39;s Blog by tianjianshi1989</title>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/github-dark.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script src="javascripts/respond.js"></script>
+    <!--[if lt IE 9]>
+      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    <!--[if lt IE 8]>
+    <link rel="stylesheet" href="stylesheets/ie.css">
+    <![endif]-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Seven&#39;s Blog</title>
   </head>
-
   <body>
+      <div id="header">
+        <nav>
+          <li class="fork"><a href="https://github.com/tianjianshi1989/lucky7.github.io">View On GitHub</a></li>
+          <li class="downloads"><a href="https://github.com/tianjianshi1989/lucky7.github.io/zipball/master">ZIP</a></li>
+          <li class="downloads"><a href="https://github.com/tianjianshi1989/lucky7.github.io/tarball/master">TAR</a></li>
+          <li class="title">DOWNLOADS</li>
+        </nav>
+      </div><!-- end header -->
 
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/tianjianshi1989/lucky7.github.io">View on GitHub</a>
+    <div class="wrapper">
 
-          <h1 id="project_title">Seven&#39;s Blog</h1>
-          <h2 id="project_tagline">不让任何事成为你不进步的理由</h2>
+      <section>
+        <div id="title">
+          <h1>Seven&#39;s Blog</h1>
+          <p>不让任何事成为你不进步的理由</p>
+          <hr>
+          <span class="credits left">Project maintained by <a href="https://github.com/tianjianshi1989">tianjianshi1989</a></span>
+          <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/michigangraham">mattgraham</a></span>
+        </div>
 
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/tianjianshi1989/lucky7.github.io/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/tianjianshi1989/lucky7.github.io/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
         <h1>
 <a id="lucky7githubio" class="anchor" href="#lucky7githubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>lucky7.github.io</h1>
 
 <p>Seven's Blog</p>
       </section>
-    </div>
 
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Seven&#39;s Blog maintained by <a href="https://github.com/tianjianshi1989">tianjianshi1989</a></p>
-        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
-      </footer>
     </div>
-
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
-
   </body>
 </html>
